--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.12.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
